--- a/styles/global.css
+++ b/styles/global.css
@@ -30,5 +30,67 @@ input,
 textarea {
    /* Intervalo de tamanho, minimo, padrao e máximo*/
    font-size: clamp(14px, 1.6rem, 2vw);
-   font-family: ;
+   font-family: "Open Sans", sans-serif;
+}
+.content {
+   width: 100%;
+   margin: 0 auto;
+}
+.sr-only {
+   position: absolute;
+   height: 1px;
+   width: 1px;
+   padding: 0px;
+   margin: -1px;
+   overflow: hidden;
+   clip-path: rect(0, 0, 0, 0);
+   white-space: 0;
+}
+/* -------------- Input Buttons ----------*/
+input,
+button,
+.button {
+   border-radius: 0.8rem;
+   height: 5rem;
+}
+button,
+.button {
+   font-family: "Poppins";
+   font-weight: 500;
+   line-height: 0;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   background: var(--blue);
+   color: var(--white);
+   cursor: pointer;
+   transition: filter 0.2s;
+}
+button:hover,
+.button:hover {
+   filter: brightness(1.2);
+}
+button > img .button > img {
+   margin-right: 1rem;
+   width: 2rem;
+}
+button.outlined,
+.button.outlined {
+   background: var(--white);
+   color: var(--blue);
+   border: 0.2rem solid var(--blue);
+}
+input,
+button,
+.button {
+   width: 100%;
+   margin-bottom: 1.8rem;
+}
+
+.content header {
+   width: 80%;
+   margin: 3.5 rem auto;
+}
+.content header img {
+   width: 16.7rem;
 }
