--- a/styles/home.css
+++ b/styles/home.css
@@ -20,7 +20,7 @@ main {
    align-items: center;
 }
 main.container {
-   width: min(36.3rem 100%);
+   width: min(36.3rem, 100%);
 }
 main h2 {
    font-family: "Poppins", sans-serif;
