--- a/styles/home.css
+++ b/styles/home.css
@@ -1,35 +1,36 @@
 .content {
-   display: grid;
-   grid-template-columns: 60% 40%;
-   grid-template-rows: 11.4rem 1fr;
-   grid-template-areas:
-      "header header"
-      "left right";
+	display: grid;
+	grid-template-columns: 60% 40%;
+	grid-template-rows: 11.4rem 1fr;
+	grid-template-areas:
+		"header header"
+		"left right";
 }
 header {
-   grid-area: header;
+	grid-area: header;
 }
 
 #bg {
-   grid-area: left;
-   background: url(/assets/home-bg-img.svg) no-repeat top/contain;
+	grid-area: left;
+	background: url(/assets/home-bg-img.svg) no-repeat top/contain;
 }
 main {
-   grid-area: right;
-   display: flex;
-   align-items: center;
+	grid-area: right;
+	display: flex;
+	align-items: center;
+	margin-top: -12rem;
 }
 main.container {
-   width: min(36.3rem 100%);
+	width: min(36.3rem, 100%);
 }
 main h2 {
-   font-family: "Poppins", sans-serif;
-   color: var(--black);
-   font-size: clamp(20px, 5vw, 2.8rem);
-   margin-bottom: 2.4rem;
+	font-family: "Poppins", sans-serif;
+	color: var(--black);
+	font-size: clamp(20px, 5vw, 2.8rem);
+	margin-bottom: 2.4rem;
 }
 
 input {
-   border: 0.2rem solid var(--grey-blue);
-   padding: 0 1.6rem;
+	border: 0.2rem solid var(--grey-blue);
+	padding: 0 1.6rem;
 }
